--- a/No1.todolist/index.html
+++ b/No1.todolist/index.html
@@ -2,22 +2,90 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>EG's TheF2E - No1.todolist</title>
-    <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>EG's TheF2E - No1.todolist</title>
+  <link rel="shortcut icon" type="image/x-icon" href="egg.ico">
+  <link rel="stylesheet" href="css/reset.css">
+
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
+  <link rel="stylesheet" href="css/style.css">
 
 </head>
 
 <body>
-    <div id="wrap">
-        <div id="header"></div>
-        <div id="main"></div>
-        <div id="footer"></div>
+  <div id="wrap">
+    <div id="header">
+
     </div>
+    <div id="main">
+
+      <div id="accordion">
+
+        <div class="card">
+          <div class="card-header">
+            <input type="checkbox" id="c001">
+<label for="c001">art class</label>
+            <a class="card-link" data-toggle="collapse" href="#collapse_001"></a>
+          </div>
+          <div id="collapse_001" class="collapse" data-parent="#accordion">
+            <div class="card-body">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, alias?
+            </div>
+          </div>
+          </label>
+        </div>
+
+<div class="card">
+  <div class="card-header">
+    <input type="checkbox" id="c002">
+<label for="c002">painting class</label>
+    <a class="card-link" data-toggle="collapse" href="#collapse_002"></a>
+  </div>
+  <div id="collapse_002" class="collapse" data-parent="#accordion">
+    <div class="card-body">
+      Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi nihil minus necessitatibus aut dolor odit omnis vero libero dolorem.
+    </div>
+  </div>
+  </label>
+</div>
+
+<div class="card">
+  <div class="card-header">
+    <input type="checkbox" id="c003">
+    <label for="c003">design class</label>
+    <a class="card-link" data-toggle="collapse" href="#collapse_003"></a>
+  </div>
+  <div id="collapse_003" class="collapse" data-parent="#accordion">
+    <div class="card-body">
+      lorem15
+    </div>
+  </div>
+  </label>
+</div>
+
+
+      </div>
+
+    </div>
+    <div id="footer"></div>
+  </div>
+
+
+
 </body>
 
 </html>
