--- a/No1.todolist/index.html
+++ b/No1.todolist/index.html
@@ -12,8 +12,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="css/bootstrap.css">
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
@@ -22,6 +21,11 @@
     crossorigin="anonymous"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/jquery.mixitup.min.js"></script>
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/bootstrap.css">
+
+  <link rel="stylesheet" href="css/fontawesome-all.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -45,9 +49,10 @@
         <li class="mix-target inProgress">
           <div class="card">
             <div class="card-header">
+
               <input type="checkbox" id="c001" name="ch">
               <label for="c001">art class</label>
-              <a class="card-link" data-toggle="collapse" href="#collapse_001"></a>
+              <a class="card-link closeCard" data-toggle="collapse" href="#collapse_001"></a>
             </div>
             <div id="collapse_001" class="collapse" data-parent="#accordion">
               <div class="card-body">
@@ -58,19 +63,17 @@
           </div>
         </li>
 
-
         <!--card_002-->
         <li class="mix-target inProgress">
           <div class="card">
             <div class="card-header">
               <input type="checkbox" id="c002" name="ch">
-              <label for="c002">painting class</label>
-              <a class="card-link" data-toggle="collapse" href="#collapse_002"></a>
+              <label for="c002">design class</label>
+              <a class="card-link closeCard" data-toggle="collapse" href="#collapse_002"></a>
             </div>
             <div id="collapse_002" class="collapse" data-parent="#accordion">
               <div class="card-body">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam sequi nihil minus necessitatibus aut dolor odit omnis vero
-                libero dolorem.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, alias?
               </div>
             </div>
             </label>
@@ -82,12 +85,12 @@
           <div class="card">
             <div class="card-header">
               <input type="checkbox" id="c003" name="ch">
-              <label for="c003">design class</label>
-              <a class="card-link" data-toggle="collapse" href="#collapse_003"></a>
+              <label for="c003">painting class</label>
+              <a class="card-link closeCard" data-toggle="collapse" href="#collapse_003"></a>
             </div>
             <div id="collapse_003" class="collapse" data-parent="#accordion">
               <div class="card-body">
-                lorem15
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, alias?
               </div>
             </div>
             </label>
@@ -103,11 +106,25 @@
 
   <!--completed checked-->
   <script>
-    $('input[name="ch"]').on('change', function (e) {
-      $(this).parent().parent().parent().toggleClass("inProgress");
-      $(this).parent().parent().parent().toggleClass("completed");
+    $('input[name="ch"]').change(function () {
+      $(this).parent().parent().parent().toggleClass('inProgress').toggleClass('completed');
     });
   </script>
+
+  <!--open card-->
+  <!-- <script>
+    $('.card-link').click(function () {
+      $(this).toggleClass('closeCard').toggleClass('openCard');
+    });
+  </script> -->
+
+  <!--open card-->
+  <script>
+    $('.card-link').click(function () {
+      $(this).toggleClass('closeCard').toggleClass('openCard');
+    });
+  </script>
+
 
 
 
