--- a/No1.todolist/index.html
+++ b/No1.todolist/index.html
@@ -22,10 +22,14 @@
   <script src="js/bootstrap.js"></script>
   <script src="js/jquery.mixitup.min.js"></script>
 
+  <!-- fontawesome -->
+  <script defer src="https://use.fontawesome.com/releases/v5.0.13/js/all.js" integrity="sha384-xymdQtn1n3lH2wcu0qhcdaOpQwyoarkgLVxC/wZ5q7h9gHtxICrpcaSUfygqZGOe"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
+    crossorigin="anonymous">
+
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="css/bootstrap.css">
-
-  <link rel="stylesheet" href="css/fontawesome-all.css">
   <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -34,11 +38,11 @@
   <div id="wrap">
 
     <!--header-->
-<div id="header" class="d-flex justify-content-center align-self-center">
+    <div id="header" class="d-flex justify-content-center align-self-center">
       <div class="row twelve columns">
-          <button class="filter-btn sesame-l" data-filter="all">＠</button>
-          <button class="filter-btn sesame-c" data-filter=".inProgress">＠</button>
-          <button class="filter-btn sesame-r" data-filter=".completed">＠</button>
+        <button class="filter-btn sesame-l" data-filter="all">＠</button>
+        <button class="filter-btn sesame-c" data-filter=".inProgress">＠</button>
+        <button class="filter-btn sesame-r" data-filter=".completed">＠</button>
       </div>
     </div>
 
@@ -53,6 +57,10 @@
             <div class="card-header">
               <input type="checkbox" name="ch">
               <a class="card-link closeCard" data-toggle="collapse" href="#collapse_001">art class</a>
+                <button class="star-btn" name="star-btn">
+                  <i class="far fa-star"></i>
+                </button>
+              <p>dwdwe</p>
             </div>
             <div id="collapse_001" class="collapse" data-parent="#accordion">
               <div class="card-body">
@@ -71,7 +79,7 @@
             </div>
             <div id="collapse_002" class="collapse" data-parent="#accordion">
               <div class="card-body">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, alias?
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae, quo.</p>
               </div>
             </div>
           </div>
@@ -83,6 +91,7 @@
             <div class="card-header .text-left">
               <input type="checkbox" name="ch">
               <a class="card-link closeCard" data-toggle="collapse" href="#collapse_003">art class</a>
+
             </div>
             <div id="collapse_003" class="collapse" data-parent="#accordion">
               <div class="card-body">
@@ -108,21 +117,32 @@
     });
   </script>
 
-  <!--open card-->
-  <!-- <script>
-    $('.card-link').click(function () {
-      $(this).toggleClass('closeCard').toggleClass('openCard');
-    });
-  </script> -->
+  <!--icon star-->
 
-  <!--open card-->
   <!-- <script>
-    $('.card-link').click(function () {
-      $(this).toggleClass('closeCard').toggleClass('openCard');
+    $('button[name="star-btn"]').change(function () {
+ $(this).toggleClass('star-btn').toggleClass('stared');
     });
   </script> -->
 
 
+
+
+
+  <!--open card-->
+  <!-- <script>
+  //   $('.card-link').click(function () {
+  //     $(this).toggleClass('closeCard').toggleClass('openCard');
+  //   });
+  // </script> -->
+
+
+  <!--open card-->
+  <!-- <script>
+  //   $('.card-link').click(function () {
+  //     $(this).toggleClass('closeCard').toggleClass('openCard');
+  //   });
+  // </script> -->
 
 
   <!--select-->
